# IssuuDownloader

./: .gitignore  README.md  pyproject.toml
issuudownloader/: __init__.py  __main__.py  cache.py  commandline.py  controller.py  downloader.py  fetcher.py  log.py  manager.py  request.py  utils.py  validation.py
