[project]
name = "issuudownloader"
version = "0.1.0"
description = "A commandline tool to download issuu-documents as pdf"
authors = [{ name = "Francesco De Rosa", email = "francescodero@outlook.it" }]
dependencies = [ "requests", "argparse", "bs4" ]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
issuudownloader = "issuudownloader.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["issuudownloader"]